@@ -986,6 +986,156 @@ specifier|public
 name|void
 name|clear
 parameter_list|(
+name|int
+name|startIndex
+parameter_list|,
+name|int
+name|endIndex
+parameter_list|)
+block|{
+if|if
+condition|(
+name|endIndex
+operator|<=
+name|startIndex
+condition|)
+return|return;
+name|int
+name|startWord
+init|=
+operator|(
+name|startIndex
+operator|>>
+literal|6
+operator|)
+decl_stmt|;
+if|if
+condition|(
+name|startWord
+operator|>=
+name|wlen
+condition|)
+return|return;
+comment|// since endIndex is one past the end, this is index of the last
+comment|// word to be changed.
+name|int
+name|endWord
+init|=
+operator|(
+operator|(
+name|endIndex
+operator|-
+literal|1
+operator|)
+operator|>>
+literal|6
+operator|)
+decl_stmt|;
+name|long
+name|startmask
+init|=
+operator|-
+literal|1L
+operator|<<
+name|startIndex
+decl_stmt|;
+name|long
+name|endmask
+init|=
+operator|-
+literal|1L
+operator|>>>
+operator|-
+name|endIndex
+decl_stmt|;
+comment|// 64-(endIndex&0x3f) is the same as -endIndex due to wrap
+comment|// invert masks since we are clearing
+name|startmask
+operator|=
+operator|~
+name|startmask
+expr_stmt|;
+name|endmask
+operator|=
+operator|~
+name|endmask
+expr_stmt|;
+if|if
+condition|(
+name|startWord
+operator|==
+name|endWord
+condition|)
+block|{
+name|bits
+index|[
+name|startWord
+index|]
+operator|&=
+operator|(
+name|startmask
+operator||
+name|endmask
+operator|)
+expr_stmt|;
+return|return;
+block|}
+name|bits
+index|[
+name|startWord
+index|]
+operator|&=
+name|startmask
+expr_stmt|;
+name|int
+name|middle
+init|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|wlen
+argument_list|,
+name|endWord
+argument_list|)
+decl_stmt|;
+name|Arrays
+operator|.
+name|fill
+argument_list|(
+name|bits
+argument_list|,
+name|startWord
+operator|+
+literal|1
+argument_list|,
+name|middle
+argument_list|,
+literal|0L
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|endWord
+operator|<
+name|wlen
+condition|)
+block|{
+name|bits
+index|[
+name|endWord
+index|]
+operator|&=
+name|endmask
+expr_stmt|;
+block|}
+block|}
+comment|/** Clears a range of bits.  Clearing past the end does not change the size of the set.    *    * @param startIndex lower index    * @param endIndex one-past the last bit to clear    */
+DECL|method|clear
+specifier|public
+name|void
+name|clear
+parameter_list|(
 name|long
 name|startIndex
 parameter_list|,
